# kmr-benchmarks

./: Makefile  README.md  config.h.in  config.make.in  configure  configure.ac
multi_process_io/: Makefile  ideal.c  ideal_file.c  ideal_memory.c  kmr_file.c  kmr_memory.c  less_locality.c  less_locality_file.c  less_locality_memory.c  multi_process_io.h
